fix resume icon spin animation on mobile

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -45,9 +45,9 @@
 	transform: scale(115%);
 }
 
-.social > a :active {
+/* .social > a :active {
 	transform: scale(120%);
-}
+} */
 
 .social.resume {
 	margin: 15.5px;
