--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -22,6 +22,8 @@
 		font-size: 1.35em;
 	}
 	.social.resume {
-		transform: scale(70%);
+		/* transform: scale(70%); */
+		height: auto;
+		width: 8.5%;
 	}
 }
