--- a/static/css/responsive.css
+++ b/static/css/responsive.css
@@ -2,9 +2,9 @@
 	.flex-wrapper {
 		justify-content: flex-start;
 	}
-	.container {
+	/* .container {
 		touch-action: none;
-	}
+	} */
 	.nav-link {
 		font-size: 130%;
 	}	
@@ -22,6 +22,8 @@
 		font-size: 1.35em;
 	}
 	.social.resume {
-		transform: scale(70%);
+		/* transform: scale(70%); */
+		height: auto;
+		width: 8.5%;
 	}
 }
